--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,13 +12,15 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Plane.js"></script>
-  <script src="src/Airport.js"></script>
+  <script src="src/BankAccount.js"></script>
+  <script src="src/BankStatement.js"></script>
+  <script src="src/Transaction.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlaneSpec.js"></script>
-  <script src="spec/AirportSpec.js"></script>
+  <script src="spec/BankAccountSpec.js"></script>
+  <script src="spec/BankStatementSpec.js"></script>
+  <script src="spec/TransactionSpec.js"></script>
 
 </head>
 
