--- a/index.html
+++ b/index.html
@@ -3,29 +3,43 @@
 <head>
   <meta charset="utf-8">
   <title>Bank Balance</title>
-
+  <link rel="stylesheet" href="bank-stylesheet.css">
 
 </head>
 
 <body>
   <div class="transaction">
+    <div id="name">
+      Current Balance:
+      <span id="show-balance">
+        Placeholder for balance
+      </span>
+    </div>
+  </div>
 
-    <div class="balance">
-      Placeholder for balance
+  <div class="method">
+    <div id="name">
+      Add a transaction
     </div>
 
-    <div class="method">
-      Select type of transaction
+    <h5>Select type of transaction</h5>
+    <form>
+
       <select id="type">
         <option value="Credit">Credit</option>
         <option value="Debit">Debit</option>
       </select>
-    </div>
+      <input type="submit" value="Add" id="add-txn">
+    </form>
 
   </div>
 
+
   <div class="statement">
-    Placeholder for statement
+    <button type="button" id="get-statement">Generate Statement</button>
+    <div id="show-statement">
+      Placeholder for statement
+    </div>
   </div>
 
   <!-- include source files here... -->
@@ -33,6 +47,7 @@
   <script src="src/BankStatement.js"></script>
   <script src="src/Transaction.js"></script>
   <script src="jquery.js"></script>
+  <script src="bank.js"></script>
 
 </body>
 </html>
