Used jQuery to update view and accept params

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
 
     <h5>Select type of transaction</h5>
-    <form>
-
-      <select id="type">
+    <form id="transaction">
+      <select name="type">
         <option value="Credit">Credit</option>
         <option value="Debit">Debit</option>
       </select>
+      <input type="number" name="value">
       <input type="submit" value="Add" id="add-txn">
     </form>
 
