Updated view to create table when clicking 'generate statement'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="transaction">
     <div id="name">
-      Current Balance:
+      Current Balance: £
       <span id="show-balance">
         Placeholder for balance
       </span>
@@ -19,7 +19,7 @@
 
   <div class="method">
     <div id="name">
-      Add a transaction
+      Add a transaction:
     </div>
 
     <h5>Select type of transaction</h5>
@@ -38,7 +38,7 @@
   <div class="statement">
     <button type="button" id="get-statement">Generate Statement</button>
     <div id="show-statement">
-      Placeholder for statement
+
     </div>
   </div>
 
