--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 
 <body>
-  <div class="transaction">
+  <div class="balance">
     <div id="name">
-      Current Balance: £
+      <h3>Current Balance: £
       <span id="show-balance">
         Placeholder for balance
-      </span>
+      </span></h3>
     </div>
   </div>
 
   <div class="method">
     <div id="name">
-      Add a transaction:
+      <h3>Add a transaction:</h3>
     </div>
 
-    <h5>Select type of transaction</h5>
+    <p>Select type of transaction</p>
     <form id="transaction">
       <select name="type">
         <option value="Credit">Credit</option>
